--- a/.github/workflows/build-recorder.yml
+++ b/.github/workflows/build-recorder.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/metadata-action@v3
         with:
           images: |
-            ghcr.io/${{ github.repository }}
+            ghcr.io/${{ github.repository_owner }}/docker-obs
           flavor: |
             latest=auto
           tags: |
