--- a/.github/workflows/build-recorder.yml
+++ b/.github/workflows/build-recorder.yml
@@ -30,12 +30,13 @@ jobs:
           images: |
             ghcr.io/${{ github.repository_owner }}/docker-obs
           flavor: |
-            latest=auto
+            latest=false
           tags: |
             type=ref,event=pr,prefix=pr-
             type=ref,event=branch,prefix=br-
             type=ref,event=tag,prefix=tag-
             type=sha,prefix=sha-,fromat=long
+            type=raw,enable=${{ github.ref == 'refs/heads/main' }},value=latest
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
