add timezone so obs saved filenames correctly
you can of course change this to reflect your timezone

--- a/recording-image/Dockerfile
+++ b/recording-image/Dockerfile
@@ -8,3 +8,6 @@ RUN apt-get update && \
     apt-get clean -y
 
 RUN echo "?package(bash):needs=\"X11\" section=\"DockerCustom\" title=\"OBS Screencast\" command=\"obs\"" >> /usr/share/menu/custom-docker && update-menus
+
+ENV TZ=Europe/Berlin
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
