--- a/recording-image/Dockerfile
+++ b/recording-image/Dockerfile
@@ -1,5 +1,6 @@
-FROM bandi13/gui-docker:1.01
+FROM bandi13/gui-docker:1.2
 
+USER root
 RUN apt-get update && \
     apt-get install -y --no-install-recommends software-properties-common && \
     add-apt-repository ppa:obsproject/obs-studio && \
@@ -11,3 +12,4 @@ RUN echo "?package(bash):needs=\"X11\" section=\"DockerCustom\" title=\"OBS Scre
 
 ENV TZ=Europe/Berlin
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+USER dockerUser
